# odh-modelcar-base-image

python/: pyproject.toml
