[project]
name = "modelcar-base-image"
version = "0.1.1"
description = "A minimal base image for KServe Modelcar/sidecar"
readme = "README.md"
authors = [
    { name = "tarilabs", email = "matteo.mortari@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
